--- a/test.ipynb
+++ b/test.ipynb
@@ -25,7 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[477932, 427714, 431417, 458450, 475791, 477714, 477964, 479087, 419540, 426101, 428905, 428906, 458411, 458443, 415482]\n"
+      "[477932, 427714, 431417, 458450, 475791, 477714, 477964, 479087, 419540, 426101, 428905, 428906, 458411, 458443, 415482]\n",
+      "15\n"
      ]
     }
    ],
@@ -33,7 +34,30 @@
     "array = [477932, 427714, 431417, 458450, 475791, 477714, 477964, 479087, 419540, 426101, 428905,\n",
     "         428906, 458411, 458443, 415482]\n",
     "\n",
-    "print(array)\n"
+    "print(array)\n",
+    "print(len(array\n",
+    "          ))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = {1: [1,2,3]}\n",
+    "test[1][0]"
    ]
   }
  ],
