--- a/test.ipynb
+++ b/test.ipynb
@@ -59,6 +59,43 @@
     "test = {1: [1,2,3]}\n",
     "test[1][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "settings = {\n",
+    "    \"defaultHash\": \"f56ab81d14e7c55304dff878c3f61f2d96c8ef1f56aff163320e67df\",\n",
+    "    \"bins\": [477932, 427714, 431417, 458450, 475791, 477714, 477964, 479087, 419540, 426101, 428905,\n",
+    "             428906, 458411, 458443, 415482]\n",
+    "}\n",
+    "with open('settings.json', 'w') as f:\n",
+    "    json.dump()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:1}\n",
+    "if(a):\n",
+    "    print(\"!empty\")\n",
+    "else:\n",
+    "    print(\"empty\")\n"
+   ]
   }
  ],
  "metadata": {
