done load and save function

--- a/test.ipynb
+++ b/test.ipynb
@@ -62,18 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "settings = {\n",
     "    \"defaultHash\": \"f56ab81d14e7c55304dff878c3f61f2d96c8ef1f56aff163320e67df\",\n",
     "    \"bins\": [477932, 427714, 431417, 458450, 475791, 477714, 477964, 479087, 419540, 426101, 428905,\n",
-    "             428906, 458411, 458443, 415482]\n",
+    "             428906, 458411, 458443, 415482],\n",
+    "    1: {2: 3}\n",
+    "\n",
     "}\n",
-    "with open('settings.json', 'w') as f:\n",
-    "    json.dump()\n"
+    "settings[1].clear()\n",
+    "print(settings[1])\n"
    ]
   },
   {
